version 2.0.4.0 (beta)
- change cqlsh value formatting
- fixed map/set/list bin reader
- ExecuteNonQuery for prepared statement
- cqlsh debug logger
- commands handling refactoring

version 2.0.3.0 (beta)
- support for list, set, map
- fixed null byte array
- support for streaming directly from socket (default) or from memory stream
- tabular display in cqlsh
- created Samples project (removed CassandraClient)

version 2.0.2.0 (beta)
- fix deadlock when query fails
- expose IFrameReader and IFrameWriter instead of Stream
- release stream id earlier

version 2.0.1.0 (beta)
- full async support with both streaming and future
- no buffering while reading
- reliable error handling while performing async IO

version 2.0.0.0 (beta)
- most part of CassandraSharp is rewritten
- support only CQL, Thrift is dead
- missing features will be brought again is future versions

version 1.0.0.0 (beta)
- compatible with Cassandra 1.1.1
- CassandraSharp.ObjectMapper : cql based simple object mapper (only compatible with Cassandra 1.1.1)
- CassandraSharp.Data : ado.net implementation (IDbConnection, IDbCommand, IDbParameter). As of now, this is a work in progress.
- CassandraSharp.MadeSimple : previously ClusterExtentions but with a bit less methods to keep it simple
- removed log4net dependency, logging is pluggable ==> use CassandraSharpConfig/Logger to provide ILog implementation (must be thread safe)
- recovery manager class is pluggable ==> use CassandraSharpConfig/Recovery to provide IRecoveryService implementation (must be thread safe)
- timestamp service is pluggable ==> use EndpointsConfig/Timestamp to provide ITimestampService implementation (must be thread safe)
- endpoint strategy is pluggable ==> EndpointsConfig/Strategy to provide your own strategy (must be thread safe)
- endpoint snitch is pluggable ==> EndpointsConfig/Snitch to provide your own snitch (must be thread safe)
- cql version can be requested via TransportConfig/CqlVersion

- BREAKING CHANGES IN CONFIG