@@ -4,6 +4,7 @@ version 2.0.4.0 (beta)
 - ExecuteNonQuery for prepared statement
 - cqlsh debug logger
 - commands handling refactoring
+- login/password for cqlsh
 
 version 2.0.3.0 (beta)
 - support for list, set, map
